--- a/frontend/index.html
+++ b/frontend/index.html
@@ -4,8 +4,23 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>AI Blog Generator</title>
+    <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
 </head>
-<body>
+<body class="flex flex-col min-h-screen bg-gray-100 font-sans antialis"> 
+
+    <!-- Navbar -->
+    <nav class="bg-blue-800 text-white p-4 flex justify-between items-center">
+
+        <div>
+            <h1 class="text-3xl font-bold">AI Blog Generator</h1>
+        </div>
+        <div>
+            <a href="#" class="text-white hover:underline">Logout</a>
+        </div>
+
+    </nav>
+
+    <!-- Main Content -->
     
 </body>
 </html>
