--- a/frontend/index.html
+++ b/frontend/index.html
@@ -105,9 +105,9 @@
     </div>
 
 
-    <!-- <footer class="text-center p-4 text-blacl mt-6">
-        Powered by <a href="https://www.youtube.com/codewithtomi">Code With Tomi</a>
-    </footer> -->
+    <footer class="text-center p-4 text-blacl mt-6">
+        Powered by <a href="https://github.com/suneelkumarpentela">Suneel Kumar</a>
+    </footer>
 
     <script>
         document.getElementById('generateBlogButton').addEventListener('click', async () => {
